_specs/ecip-1100.md: update code to remove disused import
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1100.md
+++ b/_specs/ecip-1100.md
@@ -244,7 +244,7 @@ def get_curve_function_numerator(time_delta: int) -> int:
 
 The if tdRatio < antiGravity check would then be
 
-if proposed_subchain_td * CURVE_FUNCTION_DENOMINATOR < get_curve_function_numerator(proposed.Time - commonAncestor.Time) * local_subchain_td.
+if proposed_subchain_td * CURVE_FUNCTION_DENOMINATOR < get_curve_function_numerator(current.Time - commonAncestor.Time) * local_subchain_td.
 */
 func ecbp1100PolynomialV(x *big.Int) *big.Int {
 
@@ -252,11 +252,15 @@ func ecbp1100PolynomialV(x *big.Int) *big.Int {
 
 	// if x > xcap:
 	//    x = xcap
-	xA := big.NewInt(0)
-	xA.Set(emath.BigMin(x, ecbp1100PolynomialVXCap))
+	xA := new(big.Int).Set(x)
+	if xA.Cmp(ecbp1100PolynomialVXCap) > 0 {
+		xA.Set(ecbp1100PolynomialVXCap)
+	}
 
-	xB := big.NewInt(0)
-	xB.Set(emath.BigMin(x, ecbp1100PolynomialVXCap))
+	xB := new(big.Int).Set(x)
+	if xB.Cmp(ecbp1100PolynomialVXCap) > 0 {
+		xB.Set(ecbp1100PolynomialVXCap)
+	}
 
 	out := big.NewInt(0)
 
@@ -286,7 +290,6 @@ func ecbp1100PolynomialV(x *big.Int) *big.Int {
 	return out
 }
 
-var big0 = big.NewInt(0)
 var big2 = big.NewInt(2)
 var big3 = big.NewInt(3)
 
@@ -306,8 +309,6 @@ var ecbp1100PolynomialVAmpl = big.NewInt(15)
 // height = CURVE_FUNCTION_DENOMINATOR * (ampl * 2)
 var ecbp1100PolynomialVHeight = new(big.Int).Mul(new(big.Int).Mul(ecbp1100PolynomialVCurveFunctionDenominator, ecbp1100PolynomialVAmpl), big2)
 ```
-
-
 
 ## Rationale
 
