_specs/ecip-1100.md: use ok/notok instead of maybe-confusing true/false in pseudo-code
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1100.md
+++ b/_specs/ecip-1100.md
@@ -176,8 +176,8 @@ __Condition `ecbp1100`__
 
 ```python
 if proposed_subchain_td * CURVE_FUNCTION_DENOMINATOR < get_curve_function_numerator(current.Time - commonAncestor.Time) * local_subchain_td:
-    return true
-return false
+    return notok
+return ok
 ```
 
 ### Code
