ECIP/ECBP-1100: MESS: status update, block numbers (#385)
* _specs/ecip-1100.md: vitalik's polynomial cubic, implementation details,

... and better conceptual documentation.

Signed-off-by: meows <b5c6@protonmail.com>

* _specs/ecip-1100.md: update accept/side/reject segment graphs

Now rejection (invalidation) is not a thing

Signed-off-by: meows <b5c6@protonmail.com>

* _specs/ecip-1100.md: use current.time offset instead of proposed.time

Using the local head timestamp instead of the proposed
head timestamp better translates the opinion that
first-to-come chains are 'better' than later-arriving
ones. Thus is better to use as a domain for antigravity.

Further, use of local timestamps avoids questions
and variables about the case where an antagonist would
be willing to work extra hard to create blocks with
lower or manipulated timestamps in order to change
the parameter of the curve's imposition.

Signed-off-by: meows <b5c6@protonmail.com>

* _specs/ecip-1100.md: fix mainnet activation block number, was miscalculated

Signed-off-by: meows <b5c6@protonmail.com>

* _specs/ecip-1100.md: update code to remove disused import

Signed-off-by: meows <b5c6@protonmail.com>

* _specs/ecip-1100.md: update block numbers, set Mordor: 2380000

Signed-off-by: meows <b5c6@protonmail.com>

* _specs/ecip-1100.md: bump Status to Active

Signed-off-by: meows <b5c6@protonmail.com>

* _specs/ecip-1100.md: fix merge error, remove duplicate paragraph

Signed-off-by: meows <b5c6@protonmail.com>

* _specs/ecip-1100.md: use ok/notok instead of maybe-confusing true/false in pseudo-code

Signed-off-by: meows <b5c6@protonmail.com>

Co-authored-by: Raw Pong Ghmoa <58883403+q9f@users.noreply.github.com>

--- a/_specs/ecip-1100.md
+++ b/_specs/ecip-1100.md
@@ -4,7 +4,7 @@ title: MESS (Modified Exponential Subjective Scoring)
 lang: en
 author: Isaac <b5c6@protonmail.com>
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/374
-status: Draft
+status: Active
 type: Standards Track
 category: ECBP
 created: 2020-09-09
@@ -176,8 +176,8 @@ __Condition `ecbp1100`__
 
 ```python
 if proposed_subchain_td * CURVE_FUNCTION_DENOMINATOR < get_curve_function_numerator(current.Time - commonAncestor.Time) * local_subchain_td:
-    return true
-return false
+    return notok
+return ok
 ```
 
 ### Code
@@ -244,7 +244,7 @@ def get_curve_function_numerator(time_delta: int) -> int:
 
 The if tdRatio < antiGravity check would then be
 
-if proposed_subchain_td * CURVE_FUNCTION_DENOMINATOR < get_curve_function_numerator(proposed.Time - commonAncestor.Time) * local_subchain_td.
+if proposed_subchain_td * CURVE_FUNCTION_DENOMINATOR < get_curve_function_numerator(current.Time - commonAncestor.Time) * local_subchain_td.
 */
 func ecbp1100PolynomialV(x *big.Int) *big.Int {
 
@@ -252,11 +252,15 @@ func ecbp1100PolynomialV(x *big.Int) *big.Int {
 
 	// if x > xcap:
 	//    x = xcap
-	xA := big.NewInt(0)
-	xA.Set(emath.BigMin(x, ecbp1100PolynomialVXCap))
+	xA := new(big.Int).Set(x)
+	if xA.Cmp(ecbp1100PolynomialVXCap) > 0 {
+		xA.Set(ecbp1100PolynomialVXCap)
+	}
 
-	xB := big.NewInt(0)
-	xB.Set(emath.BigMin(x, ecbp1100PolynomialVXCap))
+	xB := new(big.Int).Set(x)
+	if xB.Cmp(ecbp1100PolynomialVXCap) > 0 {
+		xB.Set(ecbp1100PolynomialVXCap)
+	}
 
 	out := big.NewInt(0)
 
@@ -286,7 +290,6 @@ func ecbp1100PolynomialV(x *big.Int) *big.Int {
 	return out
 }
 
-var big0 = big.NewInt(0)
 var big2 = big.NewInt(2)
 var big3 = big.NewInt(3)
 
@@ -306,8 +309,6 @@ var ecbp1100PolynomialVAmpl = big.NewInt(15)
 // height = CURVE_FUNCTION_DENOMINATOR * (ampl * 2)
 var ecbp1100PolynomialVHeight = new(big.Int).Mul(new(big.Int).Mul(ecbp1100PolynomialVCurveFunctionDenominator, ecbp1100PolynomialVAmpl), big2)
 ```
-
-
 
 ## Rationale
 
@@ -386,9 +387,8 @@ This feature does not require a hard fork, but the network stands to benefit and
 
 __Core-Geth__
 
-- Feature is tentatively proposed to activate in Core-Geth on Ethereum Classic network at and above block 11317400 (ETA Thursday, 1 October 2020).
-- Feature is proposed to activate in Core-Geth on Ethereum Classic's Mordor test network at and above block 2290740.
-
+- Feature is tentatively proposed to activate in Core-Geth on Ethereum Classic network at and above block _TODO_.
+- Feature is proposed to activate in Core-Geth on Ethereum Classic's Mordor test network at and above block 2380000 (ETA 29 September 2020).
 - Core-Geth feature implementation includes a few additional safety mechanisms:
   + MESS is disabled for any sync mode besides full sync.
   + MESS is only enabled once a peer has completed initial chain synchronisation, not while they are fast syncing or even full syncing during the download and process phase. This reduces the chances of a node coming online being lured into an eclipse scenario.
