move epoch duration to accepted

--- a/_specs/ecip-1099.md
+++ b/_specs/ecip-1099.md
@@ -2,8 +2,7 @@
 lang: en
 ecip: 1099
 title: Calibrate Epoch Duration
-status: Last Call
-review-period-end: 2020-10-02
+status: Accepted
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/368
