ECBP-1100: Fix curve calculation pseudocode
Previously `x` was used but not set. To avoid harming readability and keep the parameter with the descriptive name `x` is assigned inside the code.

--- a/_specs/ecip-1100.md
+++ b/_specs/ecip-1100.md
@@ -162,8 +162,7 @@ def get_curve_function_numerator(time_delta: int) -> int:
     xcap = 25132 # = floor(8000*pi)
     ampl = 15
     height = CURVE_FUNCTION_DENOMINATOR * (ampl * 2)
-    if x > xcap:
-        x = xcap
+    x = min(time_delta, xcap)
     # The sine approximator `y = 3*x**2 - 2*x**3` rescaled to the desired height and width
     return CURVE_FUNCTION_DENOMINATOR + (3 * x**2 - 2 * x**3 // xcap) * height // xcap ** 2
 
