1099: move to final

--- a/_specs/ecip-1099.md
+++ b/_specs/ecip-1099.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1099
 title: Calibrate Epoch Duration
-status: Accepted
+status: Final
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/368
