--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1049
 title: Change the ETC Proof of Work Algorithm to Keccak256
-status: Draft
+status: Rejected
 type: Standards Track
 category: Core
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/394
