1000: add ivan as ecip editor

--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -75,6 +75,7 @@ Current ECIP editors:
 * Mr. Meows D. Bits (@meowsbits)
 * Talha Cross (@soc1c)
 * Zachary Belford (@BelfordZ)
+* Ivan (@DirtyRusski)
 
 Former ECIP editors:
 * Wei Tang (@sorpaas)
