--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -75,6 +75,8 @@ Current ECIP editors:
 * Mr. Meows D. Bits (@meowsbits)
 * Talha Cross (@soc1c)
 * Zachary Belford (@BelfordZ)
+* r0n1n (@gitr0n1n)
+* Stevan Lohja (@stevanlohja)
 
 Former ECIP editors:
 * Wei Tang (@sorpaas)
