1099: fix epoch number and add resources (#396)

--- a/_specs/ecip-1099.md
+++ b/_specs/ecip-1099.md
@@ -27,7 +27,7 @@ Calibrating these parameters to better reflect todays hardware markets and minin
 Ethash transitions to a modified Dagger Hashimoto algorithm, referred to hereby as _Etchash_, on block `ETCHASH_FORK_BLOCK`:
 
 * For the Ethereum Classic main network: `ETCHASH_FORK_BLOCK := 11_700_000` (Epoch 390)
-* For the Mordor Classic test network: `ETCHASH_FORK_BLOCK := 2_520_000` (Epoch 82)
+* For the Mordor Classic test network: `ETCHASH_FORK_BLOCK := 2_520_000` (Epoch 84)
 * For the Kotti Classic test network, no upgrade is required.
 
 ### Specification ###
@@ -90,14 +90,16 @@ For the smoothest possible transition activation should occur on a block in whic
 * Epoch 390/2 = 195   (good) = block 11_700_000
 
 #### Clients ####
-* [x] core-geth - https://github.com/etclabscore/core-geth/pull/186
-* [ ] besu
+* [x] core-geth - [#186](https://github.com/etclabscore/core-geth/pull/186) [#209](https://github.com/etclabscore/core-geth/pull/209) [#212](https://github.com/etclabscore/core-geth/pull/212)
+* [x] besu - [#1421](https://github.com/hyperledger/besu/pull/1421) [#1462](https://github.com/hyperledger/besu/pull/1462)
 
 #### Pools ####
-* [ ] open-ethereum-pool
+* [x] open-ethereum-pool https://github.com/etclabscore/open-etc-pool
+* [x] stand-alone etchash library https://github.com/etclabscore/go-etchash
 
 #### Mining Software ####
 * [ ] ethminer
+* [x] proprietary miners, see https://github.com/eth-classic/etchash
 
 ### References ###
 - [ECIP-1099 Research/Test data](https://github.com/iquidus/ecip-1099-data)
